--- a/app/src/main/res/layout/app_bar_map_encargado.xml
+++ b/app/src/main/res/layout/app_bar_map_encargado.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="pe.edu.upc.map_encargado">
+    tools:context=".activities.MapEncargado">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
