--- a/app/src/main/res/layout/content_map_encargado.xml
+++ b/app/src/main/res/layout/content_map_encargado.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="pe.edu.upc.map_encargado"
+    tools:context=".activities.MapEncargado"
     tools:showIn="@layout/app_bar_map_encargado">
 
 </android.support.constraint.ConstraintLayout>
