add design for list attendances

--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -27,12 +27,14 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:hint="Enter your ID"
+            android:text="wsaccaco"
             android:inputType="text" />
 
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dip"
+
             android:text="@string/pwd" />
 
         <EditText
@@ -40,6 +42,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:hint="Enter Password"
+            android:text="tetitas123"
             android:inputType="textPassword" />
 
         <TextView
