--- a/app/src/main/res/layout/activity_map_encargado.xml
+++ b/app/src/main/res/layout/activity_map_encargado.xml
@@ -18,8 +18,15 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:fitsSystemWindows="true"
-        app:headerLayout="@layout/nav_header_map_encargado"
-        app:menu="@menu/activity_map_encargado_drawer" />
+        android:fitsSystemWindows="true" >
+
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:id="@+id/serviceRecyclerView"/>
+
+    </android.support.design.widget.NavigationView>
+
 
 </android.support.v4.widget.DrawerLayout>
