--- a/app/src/main/res/layout/activity_map_encargado.xml
+++ b/app/src/main/res/layout/activity_map_encargado.xml
@@ -24,7 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="10dp"
-            android:id="@+id/serviceRecyclerView"/>
+            android:id="@+id/attendancesRecyclerView"/>
 
     </android.support.design.widget.NavigationView>
 
