--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -1,20 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="pe.edu.upc.pmcontrolpuntoventa.activities.Home"
-    tools:ignore="MergeRootFrame">
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+tools:context="pe.edu.upc.pmcontrolpuntoventa.activities.Home">
 
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_gravity="fill_vertical"
-        android:layout_marginTop="20pt"
-        android:gravity="center_horizontal"
-        android:text="Welcome User"
-        android:textSize="25dip" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:layout_height="wrap_content">
 
-</FrameLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10pt"
+            android:layout_marginBottom="10pt"
+            android:gravity="center_horizontal"
+            android:text="Welcome User"
+            android:textSize="25dip" />
+
+        <Button
+            android:id="@+id/buttonProducts"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Reporte"
+            android:onClick="navigatetoReport"
+            android:theme="@style/MyButton"
+            android:layout_margin="2dp"/>
+
+        <Button
+            android:id="@+id/buttonReport"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Productos"
+            android:theme="@style/MyButton"
+            android:layout_margin="2dp"/>
+
+        <LinearLayout
+            android:id="@+id/SecondLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:weightSum="1.0" >
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Button"
+                android:layout_margin="2dp"
+                android:theme="@style/MyButton"
+                android:layout_weight=".50" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:text="Button"
+                android:theme="@style/MyButton"
+                android:layout_weight=".50" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+
+
+
+
+
+
+
+</android.support.design.widget.CoordinatorLayout>
